== Maintenance

* deprecations

  * BaseTextFormatter#colourize - use colorize_failure instead.
  * BaseTextFormatter#magenta - use red instead.

* enhancements

  * allow registering example groups with a path-like key (Pat Maddox)
  * start DRb service at "druby://localhost:0" (Hongli Lai) - See http://redmine.ruby-lang.org/issues/show/496 
  * consistent reporting of errors as failures
  * added spec/test/unit as more intuitive path to loading test/unit interop lib
  
* bug fixes

  * support delegating operator matchers to subject with should_not

=== Version 1.1.12 / 2009-01-11

WARNING: there was a stub/mock bug in 1.1.11 that allowed a structure that was
not intended:

  obj.stub!(:msg)
  obj.msg
  obj.should_receive(:msg)
  
That would pass in 1.1.11, but should not have been allowed to, since the
message is received before the expectation is set. This was reported (#637)
and fixed for release 1.1.12, but may cause unexpected failures if you had
examples set up as above.

WARNING: mock.should_receive(:msg).with(an_instance_of(klass)) now correctly uses instance_of? instead of kind_of?. This may break some existing code examples, but the fix is to just use kind_of instead of an_instance_of

* 3 deprecations

  * deprecated ExampleMethods#implementation_backtrace - use ExampleMethods#backtrace instead
  * deprecated ExampleGroupMethods#example_group_backtrace - use ExampleGroupMethods#backtrace instead
  * deprecated Spec::Example::BehaviourRunner class (likely that nobody is using this)

* 6 major enhancements

  * it { should matcher } - support for implicit receiver of #should (Joe Ferris of thoughtbot)
  * subject { ... } - works in conjunction with implicit receiver of #should
  * wrap_expectation (for wrapping multiple expectations and/or t/u assertions)
  * added array.should =~ [1,2,3] # passes if array contains exactly the same elements in any order (Jeff Dean and Pat Maddox)