@@ -1,0 +1,3 @@
+require 'spec'
+
+Spec::Runner.autorun
