@@ -1,5 +1,5 @@
 $:.push File.join(File.dirname(__FILE__), *%w[.. .. lib])
-require 'spec'
+require 'spec/autorun'
 
 class MySpec < Spec::ExampleGroup
   def should_pass_with_should
