@@ -1,5 +1,5 @@
 $:.push File.join(File.dirname(__FILE__), *%w[.. .. lib])
-require 'spec'
+require 'spec/autorun'
 
 describe "Running an Example" do
   it "should not output twice" do
